# chat-bot-common

./: Cargo.toml
.github/workflows/: test.yml
src/: ai_model_type.rs  audit_log.rs  browsers.rs  client_data_type.rs  currency_converter.rs  history_labels.rs  inventory_type.rs  languages.rs  lib.rs  llm_agent_other_settings.rs  llm_agent_settings.rs  llm_model_type.rs  metadata_prefixes.rs  object_id.rs  object_id_static.rs  request_metadata.rs  stt_options.rs  translations.rs  tts_options.rs  type_of_business.rs
src/cars/: mod.rs
src/dg_tool_calls_models/: find_property_response_json_model.rs  mod.rs  project_json_model.rs  property_unit_model.rs  sales_office.rs
src/llm_agent_settings/: gpt_5_reasoning_effort.rs  gpt_5_verbosity.rs  llm_agent_settings.rs  mod.rs
src/object_id/: as_str.rs  mod.rs  object_id.rs  object_id_static.rs  utils.rs  value_validator.rs
src/tool_call_resp_models/: appointment_tool_call_response_json.rs  mod.rs  property_tool_call_response_json_model.rs
src/tool_call_resp_models/cars/: appointment_too_call_response.rs  mod.rs
src/tool_call_resp_models/real_estate/: appointment_tool_call_response_json.rs  mod.rs
