[package]
name = "chat-bot-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = ["derive"] }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git", features = [
    "user_agent",
] }

serde_json = "*"
