[package]
name = "chat-bot-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
dioxus = ["dioxus-admin-ui-kit"]

[dependencies]
serde = { version = "*", features = ["derive"] }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git", features = [
    "user_agent",
] }

serde_json = "*"

dioxus-admin-ui-kit = { tag = "0.1.0", git = "https://github.com/MyJetTools/dioxus-admin-ui-kit.git", optional = true }
